Work on merging in my content

--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 ---
-layout: archive
-author_profile: true
+layout: splash
+title: "Splash Page"
+excerpt: "Excerpt"
+header:
+  image: splash-banner-image.jpg
+  overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
+  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
 ---
-
-{% include base_path %}
-
-<h3 class="archive__subtitle">{{ site.data.ui-text[site.locale].recent_posts }}</h3>
-
-{% for post in paginator.posts %}
-  {% include archive-single.html %}
-{% endfor %}
-
-{% include paginator.html %}
