Misc fixes for to match my site needs / content.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 ---
 layout: splash
-title: "Splash Page"
-excerpt: "Excerpt"
+title: "Home"
+lead: Hi, I'm Michael.
+excerpt: "I am a software engineer with a passion for technology."
 header:
-  image: splash-banner-image.jpg
+  overlay_image: splash-banner-image.jpg
+  overlay_color: "#5e616c"
   overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
-  caption: "Photo credit: [**Unsplash**](https://unsplash.com)"
 ---
