--- a/index.html
+++ b/index.html
@@ -8,3 +8,21 @@ header:
   overlay_color: "#5e616c"
   overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
 ---
+
+<div>
+  <h2>Latest Post</h2>
+  <div style="padding-left: 15px;">
+    {% assign post = site.posts.first %}
+
+    <h3 style="margin-top:3px;">
+      {% if post.title %}
+          <a href="{{ url }}{{ post.url }}">{{ post.title }}</a>
+      {% endif %}
+    </h3>
+    <h4 style="margin-top:3px;">
+      {{ post.date | date: '%B %d, %Y' }}
+    </h4>
+
+    {{ post.content | strip_html | truncatewords: 40 }}
+  </div>
+</div>
