Fixes as a result of the update.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "Home"
 lead: Hi, I'm Michael.
 excerpt: "I am a software engineer with a passion for technology."
 header:
-  overlay_image: splash-banner-image.jpg
+  overlay_image: images/splash-banner-image.jpg
   overlay_color: "#5e616c"
   overlay_filter: 0.5 # same as adding an opacity of 0.5 to a black background
 ---
