Add more posts link

--- a/index.html
+++ b/index.html
@@ -39,4 +39,7 @@ header:
 
     {{ post.content | strip_html | truncatewords: 40 }}
   </div>
+  <p>
+    <a href="{{ domain }}/blog">More posts...</a>
+  </p>
 </div>
