Fix more posts list

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@ header:
 
     {{ post.content | strip_html | truncatewords: 40 }}
   </div>
-  <p>
-    <a href="{{ domain }}/blog">More posts...</a>
-  </p>
+  <div style="padding-left: 15px;margin-top: 30px;">
+    <h3 style="margin-top:3px;">
+      <a href="{{ domain }}/blog">More posts...</a>
+    </h3>
+  </div>
 </div>
